--- a/styles/base.css
+++ b/styles/base.css
@@ -25,8 +25,7 @@
 
 ::-moz-selection, ::selection {
   background: var(--primary-color);
-  color: #fff;
-}
+  color: #fff;}
 
 html * {
   font-family: 'Space Mono', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -94,7 +93,7 @@ body {
 }
 
 .top-menu ul li a:hover {
-  background: var(--primary-color);
+  background: linear-gradient(45deg, var(--primary-color) 30%, var(--secondary-color) 70%);
   color: var(--background-color);
 }
 
@@ -436,14 +435,20 @@ footer {
   border-bottom: 1px var(--text-color) dashed;
 }
 
-/*[data-icon="Next.js"] svg,
-[data-icon="Zeit"] svg,
-[data-icon="CoffeeScript"] svg {
-  fill: var(--text-color);
-}*/
-
 .data-icon {
-	fill: var(--text-color) !important;
+	background: var(--background-color) !important;
+}
+
+.data-icon img {
+	-webkit-background-clip: content-box;
+	-webkit-fill-color: transparent;
+	background: var(--background-color) !important;
+	padding: 30px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 20px 20px;
 }
 
 .stack-name {
@@ -452,6 +457,11 @@ footer {
   color: var(--text-color);
 }
 
+.contact div {
+  font-size: 30px;
+  align-items: center;
+  margin: 20px 20px !important;
+}
 /* Override scroll progress */
 .writing-progress > div {
   background: var(--primary-color) !important;
@@ -461,14 +471,13 @@ footer {
 	background: var(--primary-color);
 	border-radius: 50%;
 	height: 10px;
-  width: 10px;
-  display: inline-block;
-
-	box-shadow: 0 0 0 0 var(--primary-color);
+    width: 10px;
+    display: inline-block;
+    box-shadow: 0 0 0 0 var(--primary-color);
 	transform: scale(1.2);
-  animation: pulse 2s infinite;
-  margin: -5px 15px 0 0;
-  vertical-align: middle;
+    animation: pulse 2s infinite;
+    margin: -5px 15px 0 0;
+    vertical-align: middle;
 }
 
 @keyframes pulse {
@@ -497,7 +506,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background: var(--background-color);
+    background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
     box-shadow: 0 -2px 15px var(--hr-color);
     left: 0;
     padding: 30px 0;
