--- a/styles/base.css
+++ b/styles/base.css
@@ -506,7 +506,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
+    /*background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);*/
     box-shadow: 0 -2px 15px var(--hr-color);
     left: 0;
     padding: 30px 0;
