--- a/styles/base.css
+++ b/styles/base.css
@@ -2,32 +2,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Space Mono');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat');
 :root {
+	/* not-quite white is easier on the eyes */
   --primary-color: #bc6c25;
   --secondary-color: #dda15e;
   --dark-grey: #666;
   --text-color: #000;
-  --background-color: #fff;
+  --background-color: #fdfdfd;
   --hr-color: #ddd;
   --article-text-color: #444;
   --uses-secondary-color: #bbb;
 }
 
 [data-theme="dark"] {
-  /* --primary-color: #0070f4;
-  --secondary-color: #09ded8; */
+  /* pure black is better than not-quite */
   --dark-grey: #666;
   --text-color: #fff;
-  --background-color: #010101;
+  --background-color: #000;
   --hr-color: #333;
   --article-text-color: #eee;
-  /* --uses-secondary-color: #bbb; */
 }
 
 ::-moz-selection, ::selection {
   background: var(--primary-color);
   color: #fff;}
 
-html * {
+html {
   font-family: 'Space Mono', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -62,13 +61,10 @@ body {
   display: inline-block;
   vertical-align: middle;
 }
-
+ /* tabbykatz */
 .top-menu ul li.logo img {
-  width: 40px;
-  border-radius: 250px;
-  padding: 3px;
-  border: 3px var(--primary-color) solid;
-  transition: all .1s linear;
+	width: auto;
+	height: 1.50em;
 }
 
 .top-menu ul li.logo a:hover {
@@ -373,7 +369,7 @@ footer {
 }
 
 .uses-intro, .about-intro {
-  font-family: Montserrat;
+  font-family: Montserrat !important;
   font-size: 20px;
   line-height: 1.8em;
   color: var(--text-color);
@@ -434,15 +430,16 @@ footer {
 .uses-list li:not(.head) a:hover {
   border-bottom: 1px var(--text-color) dashed;
 }
-
+/* this is what makes the about icons invert! */
 .data-icon {
-	background: var(--background-color) !important;
+	fill: var(--text-color);
 }
 
+.data-icon path {
+	fill: var(--text-color) !important;
+}
 .data-icon img {
-	-webkit-background-clip: content-box;
-	-webkit-fill-color: transparent;
-	background: var(--background-color) !important;
+	fill: var(--text-color);
 	padding: 30px;
     font-size: 30px;
     width: 50px;
@@ -457,10 +454,23 @@ footer {
   color: var(--text-color);
 }
 
-.contact div {
-  font-size: 30px;
+.contact {
+  font-family: Montserrat !important;
+  font-size: 20px;
+  text-align: center;
   align-items: center;
-  margin: 20px 20px !important;
+}
+
+.contact a {
+	color: var(--text-color);
+	text-decoration: none;
+	border-bottom: 1px var(--text-color) dashed;
+
+}
+
+.contact a:hover {
+	color: var(--dark-grey);
+
 }
 /* Override scroll progress */
 .writing-progress > div {
@@ -507,7 +517,7 @@ footer {
     bottom: 0;
     width: 100%;
     /*background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);*/
-    box-shadow: 0 -2px 15px var(--hr-color);
+   /* box-shadow: 0 -2px 15px var(--hr-color);*/
     left: 0;
     padding: 30px 0;
   }
