--- a/styles/base.css
+++ b/styles/base.css
@@ -390,7 +390,7 @@ footer {
   list-style: none;
   margin: 40px 0 80px;
   padding: 0;
-  font-family: 'Space Mono', ibm-plex-mono, Monaco, 'Lucida Console';
+  font-family: Montserrat !important;
   font-size: 16px;
 }
 
