--- a/styles/base.css
+++ b/styles/base.css
@@ -67,6 +67,13 @@ body {
 	height: 1.50em;
 }
 
+/* kitten icon */
+.kitten {
+	height: 3em;
+	width: auto;
+	display: inline-block;
+	position: relative;
+}
 .top-menu ul li.logo a:hover {
   background: none;
 }
@@ -363,9 +370,15 @@ footer {
 .signature {
   font-family: Montserrat !important;;
   font-size: 21px;
-  line-height: 1.9em;
-  margin-top: 80px;
+  line-height: 1em;
+  margin-top: 30px;
   text-align: right;
+}
+
+.sig-name {
+	margin-top: 26px;
+	float: right;
+	font-size: 2.1em;
 }
 
 .uses-intro, .about-intro {
