--- a/styles/base.css
+++ b/styles/base.css
@@ -136,7 +136,7 @@ h1, h2, h3, h4, h5, h6 {
   font-style: italic;
   font-weight: 800;
   font-size: calc(3vw + 3vh);
-  text-align: center;
+  text-align: left;
   margin: 100px 0 0;
   letter-spacing: -.05rem;
   line-height: 1em;
@@ -193,12 +193,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 800;
   font-size: calc(3vw + 3vh);
   letter-spacing: -.05rem;
-  margin: 50px 0 30px;
+  margin: 40px 0 30px;
   background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   line-height: 1em;
-  padding-bottom: 20px;
 }
 
 .writing-container h1,
@@ -219,6 +218,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0 0 30px 20px;
   list-style: circle;
+  font-family: Montserrat;
 }
 
 .writing-container ul li {
@@ -243,13 +243,6 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--article-text-color);
 }
 
-.writing-container p em {
-  font-family: 'Space Mono', ibm-plex-mono, Monaco, 'Lucida Console';
-  font-style: italic;
-  font-weight: bold;
-  font-size: 21px;
-}
-
 .writing-container > p:first-child::first-letter {
   float: left;
   margin: 2px 0 0 -2px;
@@ -260,7 +253,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .writing-container *:not(pre) > code {
-  font-family: Montserrat;
+  font-family: 'Space Mono', ibm-plex-mono, Monaco, 'Lucida Console';
   border: 1px var(--primary-color) dashed;
   color: var(--primary-color);
   padding: 4px 7px 7px;
@@ -275,7 +268,7 @@ hr {
   border: none;
   width: 100%;
   text-align: center;
-  margin: 30px auto;
+  margin:5px auto;
 }
 
 hr:before {
@@ -284,7 +277,7 @@ hr:before {
   color: var(--hr-color);
 }
 
-.writing-container a {
+.writing-container p a {
   font-family: Montserrat;
   color: var(--text-color);
   text-decoration: none;
@@ -386,8 +379,12 @@ footer {
   font-size: 20px;
   line-height: 1.8em;
   color: var(--text-color);
+  margin-top: 5px;
 }
 
+.about-intro div {
+  margin-top: 10px;
+}
 .uses-intro a, .about-intro a {
   color: var(--text-color);
   text-decoration: none;
@@ -404,7 +401,7 @@ footer {
   margin: 40px 0 80px;
   padding: 0;
   font-family: Montserrat !important;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .uses-list li.head {
@@ -529,8 +526,6 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    /*background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);*/
-   /* box-shadow: 0 -2px 15px var(--hr-color);*/
     left: 0;
     padding: 30px 0;
   }
@@ -651,13 +646,17 @@ footer {
   	font-weight: 800;
   	font-size: calc(3vw + 3vh);
   	text-align: left;
-  	margin: 100px 0 0;
+  	margin: 100px 0 15px;
   	letter-spacing: -.05em;
   	line-height: 1em;
   	background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
-  	padding-bottom: 10px;
+	padding-bottom: 20px;
+  }
+
+  .about-h1 h1 {
+	  margin-bottom: 5px !important;
   }
 
   .hope-liked {
