--- a/styles/base.css
+++ b/styles/base.css
@@ -36,7 +36,7 @@ body {
   color: var(--text-color);
   margin: 0;
 }
-
+/* make switching smoother */
 * {
   transition: background .2s linear;
 }
@@ -130,7 +130,34 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--text-color);
   font-weight: 800;
 }
+/* futile attempts to manipulate these icons */
+.blog-icon {
+	fill: var(--text-color) !important;
+	height: 50px !important;
+	width: auto !important;
+	float: left;
+    padding: 10px;
+}
 
+.blog-icon div {
+	fill: var(--text-color) !important;
+}
+.blog-icon path {
+	fill: var(--text-color) !important;
+}
+
+.blog-icon img {
+	fill: var(--text-color) !important;
+}
+
+.blog-icon svg {
+	 fill: var(--text-color) !important;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 .blog-title {
   font-family: 'Space Mono', ibm-plex-mono, Monaco, 'Lucida Console';
   font-style: italic;
@@ -211,7 +238,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .writing-container img {
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35em;
 }
 
 .writing-container ul {
@@ -487,6 +517,7 @@ footer {
   background: var(--primary-color) !important;
 }
 
+/* new post ! */
 .pulse {
 	background: var(--primary-color);
 	border-radius: 50%;
