--- a/styles/base.css
+++ b/styles/base.css
@@ -67,6 +67,95 @@ body {
 	height: 1.50em;
 }
 
+/* about me picture fun */
+.space {
+	margin: 20px 20px 20px 20px;
+	height: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.pic-container {
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.pic-box {
+  width: 65vmin;
+  height: 65vmin;
+  /*border: 1px dashed rgba(255,255,255,0.4);*/
+  position: relative;
+  
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 50%;
+    /* border: 1px dashed rgba(255,255,255,0.4);*/
+    transform: scale(1.42);
+  }
+}
+
+.pic-spin-container {
+  width: 95%;
+  height: 95%;
+  animation: spin 12s linear infinite;
+  position: relative;
+}
+
+.pic-shape {
+  width: 100%;
+  height: 100%;
+  transition: border-radius 1s ease-out;
+  border-radius: 60% 40% 30% 70% / 60% 70% 30% 40%;
+  animation: morph 8s ease-in-out infinite both alternate;
+  position: relative;
+  overflow: hidden;
+  z-index: 5;
+  }
+.pic-bd {
+  width: 142%;
+  height: 142%;
+  position: absolute;
+  left: -21%;
+  top: -21%;
+   background-image: url("/avatar.jpg");
+   /*background: url(https://ibb.co/MM0HjkQ);*/
+  background-size: 100%;
+  background-position: center center;
+  display: flex;
+  color: #003;
+  font-size: 5vw;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  animation: spin 12s linear infinite reverse;
+  opacity: 1;
+  z-index: 2;
+}
+
+@keyframes morph {
+  0% {border-radius: 40% 60% 60% 40% / 60% 30% 70% 40%;} 
+  100% {border-radius: 40% 60%;} 
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
+}
+/* end fun */
+
 /* kitten icon */
 .kitten {
 	height: 3em;
@@ -163,14 +252,14 @@ h1, h2, h3, h4, h5, h6 {
   font-style: italic;
   font-weight: 800;
   font-size: calc(3vw + 3vh);
-  text-align: left;
+  text-align: center;
   margin: 100px 0 0;
   letter-spacing: -.05rem;
   line-height: 1em;
   background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .entry-description {
@@ -225,6 +314,7 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   line-height: 1em;
+  z-index: 1;
 }
 
 
@@ -604,7 +694,7 @@ footer {
     text-align: center;
     position: fixed;
     top: 20px;
-    z-index: 9999;
+    z-index: 1;
   }
 
   .theme-switch-button-mobile {
@@ -683,14 +773,15 @@ footer {
   	font-style: italic;
   	font-weight: 800;
   	font-size: calc(3vw + 3vh);
-  	text-align: left;
-  	margin: 100px 0 15px;
+  	text-align: center;
+  	margin: 50px 0 0px;
   	letter-spacing: -.05em;
   	line-height: 1em;
   	background: linear-gradient(45deg, var(--primary-color) 32.5%, var(--secondary-color) 50.5%);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 	padding-bottom: 20px;
+	z-index: 1;
   }
 
   .about-h1 h1 {
