--- a/styles/base.css
+++ b/styles/base.css
@@ -76,6 +76,14 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+
+.gif {
+	height: 25em;
+	width: auto;
+	border: 3px solid;
+	border-color: var(--secondary-color);
+	border-radius: 15px;
+}
 .landing-pics {
 	border-radius: 15px;
 	border: 3px solid;
