--- a/styles/base.css
+++ b/styles/base.css
@@ -441,7 +441,9 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 35em;
+  width: 100%;
+  height: auto;
+
 }
 
 .writing-container ul {
